// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlightBox renders for label="!" with appropriate position and dimensions 1`] = `
<div
  aria-hidden="true"
  className="highlightBox"
  data-automation-id="screenshot-highlight-box"
  style={
    {
      "height": "50px",
      "left": "50%",
      "top": "50%",
      "width": "100px",
    }
  }
>
  <div
    className="highlightBoxLabel"
  >
    !
  </div>
</div>
`;

exports[`HighlightBox renders for label=null with appropriate position and dimensions 1`] = `
<div
  aria-hidden="true"
  className="highlightBox"
  data-automation-id="screenshot-highlight-box"
  style={
    {
      "height": "50px",
      "left": "50%",
      "top": "50%",
      "width": "100px",
    }
  }
/>
`;
